# synerunify

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  entrypoint.sh  nginx.conf  transform.sh
admin/: .eslintrc.js  Dockerfile  (+10 more)
miniapp/lhc/backend/: .clang-format  CMakeLists.txt
miniapp/lhc/backend/include/analysis/: analyzer.h  athena_analyzer.h  event_processor.h
miniapp/lhc/backend/include/api/: routes.h  server.h
miniapp/lhc/backend/include/generator/: generator.h  generator_factory.h  madgraph_generator.h  pythia_generator.h  sherpa_generator.h
miniapp/lhc/backend/include/simulation/: detector_construction.h  geant4_simulator.h  physics_list.h  primary_generator.h  simulator.h
miniapp/lhc/backend/include/types/: event.h  particle.h
miniapp/lhc/backend/include/utils/: config.h  logger.h
miniapp/lhc/backend/src/: main.cpp
miniapp/lhc/backend/src/analysis/: athena_analyzer.cpp  event_processor.cpp
miniapp/lhc/backend/src/api/: routes.cpp  server.cpp
miniapp/lhc/backend/src/generator/: generator.cpp  generator_factory.cpp  madgraph_generator.cpp  pythia_generator.cpp  sherpa_generator.cpp
miniapp/lhc/backend/src/simulation/: detector_construction.cpp  geant4_simulator.cpp  physics_list.cpp  primary_generator.cpp  simulator.cpp
miniapp/lhc/backend/src/utils/: config.cpp  logger.cpp
server/: .env  Cargo.toml  Dockerfile.alpine  Dockerfile.logger-server  Dockerfile.scratch  Dockerfile.service-erp  Dockerfile.service-file  Dockerfile.service-logger  Dockerfile.service-mall  Dockerfile.service-system  Dockerfile.system-server  build.sh  transform.sh
server/.cargo/: config.toml
server/common/generator/: Cargo.toml
server/common/generator/src/: main.rs
server/common/generator/src/templates/: model.tera  request.tera  service.tera
server/common/utils/: Cargo.toml
server/framework/common/: Cargo.toml
server/framework/common/src/: lib.rs
server/framework/common/src/base/: logger.rs  mod.rs  model.rs  page.rs  response.rs
server/framework/common/src/config/: config.rs  database.rs  logger.rs  mod.rs
server/framework/common/src/constants/: common_status.rs  enum_constants.rs  enums.rs  mod.rs
server/framework/common/src/context/: context.rs
server/framework/common/src/database/: mod.rs  mongo.rs  mysql.rs  redis.rs  redis_constants.rs
server/framework/common/src/formatter/: mod.rs  string_date_time.rs
server/framework/common/src/interceptor/: mod.rs  sea_orm.rs
server/framework/common/src/interceptor/orm/: active_filter.rs  mod.rs  sea_interceptor.rs  simple_support.rs  support_order.rs
server/framework/common/src/middleware/: auth.rs  authorize.rs  grpc_auth.rs  logger.rs  mod.rs  operation_logger.rs  request_context.rs
server/framework/common/src/state/: app_state.rs
server/framework/common/src/task/: task_manager.rs
server/framework/common/src/utils/: crypt_utils.rs  jwt_utils.rs  minio_utils.rs  mod.rs  snowflake_generator.rs  string_utils.rs  type_utils.rs
server/framework/common/tests/: crypt_utils.rs  test_snowflake_generator.rs
server/framework/macros/: Cargo.toml
server/framework/macros/src/: lib.rs
server/framework/middleware/: Cargo.toml
server/framework/middleware/src/: logger.rs
server/framework/tenant/: Cargo.toml
server/module/module-erp/erp-model/: Cargo.toml
server/module/module-erp/erp-server/: Cargo.toml
server/module/module-erp/erp-server/src/: main.rs  route.rs
server/module/module-file/file-common/: Cargo.toml
server/module/module-file/file-common/src/: lib.rs
server/module/module-file/file-model/: Cargo.toml
server/module/module-file/file-server/: Cargo.toml
server/module/module-file/file-server/src/: main.rs  route.rs
server/module/module-logger/logger-model/: Cargo.toml
server/module/module-logger/logger-server/: Cargo.toml
server/module/module-logger/logger-server/src/: main.rs  route.rs
server/module/module-mall/mall-model/: Cargo.toml
server/module/module-mall/mall-server/: Cargo.toml
server/module/module-mall/mall-server/src/: main.rs  route.rs
server/module/module-system/system-common/: Cargo.toml
server/module/module-system/system-common/src/: lib.rs
server/module/module-system/system-grpc/: Cargo.toml  build.rs
server/module/module-system/system-grpc/proto/: api.proto
server/module/module-system/system-grpc/src/: lib.rs  system_client.rs
server/module/module-system/system-model/: Cargo.toml
server/module/module-system/system-model/src/: lib.rs
server/module/module-system/system-server/: Cargo.toml  Dockerfile  buid.sh
server/module/module-system/system-server/resources/: area.csv
server/module/module-system/system-server/src/: .env.dev  .env.prod  initializer.rs  main.rs  route.rs
server/module/module-system/system-server/tests/: init_data.rs  test_concurrent_requests.rs
server/module/module-test/: Cargo.toml
server/module/module-test/src/: main.rs
server/module/module-test/src/tests/: extend_fields.rs  mod.rs
server/module/module-test/tests/: test_concurrent_requests.rs  test_concurrent_requests_with_token_and_server_threads.rs  test_extend_fields.rs  test_snowflake_generator.rs
server/module/module-third/captcha-service/: Dockerfile  config.json  go.mod  go.sum  transform.sh
server/module/module-third/module-captcha/captcha-grpc-rust/: Cargo.toml  build.rs
server/module/module-third/module-captcha/captcha-service/: Dockerfile  build.sh  config.dev.json  config.json  go.mod  go.sum  transform.sh
server/module/module-third/module-process/process-service/: .env  .gitignore  Dockerfile  README.md  README_VIDEO.md  build.sh  entrypoint.sh  requirements.txt  supervisord.conf  transform.sh
server/module/system/: Cargo.toml
server/module/system/src/: main.rs
server/tool/generator/: Cargo.toml
server/tool/generator/src/: main.rs
server/tool/generator/src/templates/: api.tera  convert.tera  dart_api.tera  front_add.tera  front_api.tera  front_api_index.tera  front_delete.tera  front_edit.tera  front_index.tera  front_translation.tera  mod.tera  model.tera  request.tera  response.tera  route.tera  service.tera
(+1694 files in other folders)
