[workspace]
members = ["common/*", "system"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://docs.rs/axum/latest/axum/#required-dependencies
axum = { version = "0.8.2", default-features = false, features = [
    "matched-path",
    "form",
    "tracing",
    "query",
    "json",
    "tokio",
    "http1",
    "multipart",
] }
