[package]
name = "macros"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints.rust]
unused_imports = "allow"
warnings = "allow"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.98", features = ["full"] }
quote = "1.0.38"
proc-macro2 = "1.0"
once_cell = "1.20.3"
ctor = "0.4.0"

[dev-dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
axum = "0.8.1"