[package]
name = "macros"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints.rust]
unused_imports = "allow"
warnings = "allow"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.101", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0"
once_cell = "1.21.3"
ctor = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.12"
serde_json = "1.0.140"
itertools = "0.14.0"

[dev-dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
axum = "0.8.4"
