[package]
name = "middleware"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
chrono = { version = "0.4.40" }       # 用于处理时间
# log
tracing = { version = "0.1.41" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.19" }

common = { path = "../common" }