[package]
name = "erp-server"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints.rust]
unused_imports = "allow"
warnings = "allow"

[dependencies]
# axum
# https://docs.rs/axum/latest/axum/#required-dependencies
axum = { version = "0.8.4", default-features = false, features = [
    "matched-path",
    "form",
    "tracing",
    "query",
    "json",
    "tokio",
    "http1",
    "multipart",
] }
axum-macros = "0.5.0"
axum-extra = { version = "0.10.1", features = ["query"] }
# async require
tokio = { version = "1.45.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
# log require
tracing = { version = "0.1.41" }
tracing-appender = { version = "0.2.3", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "env-filter",
    "time",
    "local-time",
    "fmt",
    "registry",
    "std",
] }
console-subscriber = { version = "0.4.1", default-features = false, features = [
    "env-filter",
] }
chrono = { version = "0.4.41" }
time = { version = "0.3.41", default-features = false, features = ["macros"] }
# json require
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140" }
serde_repr = { version = "0.1.20" }
serde_with = { version = "3.12.0" }
# captcha require
captcha-rs = { version = "0.2.11" }
# jwt require
jsonwebtoken = { version = "9.3.1" }
# static file require
tower = { version = "0.5.2", default-features = false, features = ["util"] }
tower-http = { version = "0.6.4", default-features = false, features = [
    "fs",
    "trace",
    "cors"
] }
# request params validator require
validator = { version = "0.20.0", features = ["derive"] }

# password encode require
argon2 = { version = "0.5.3" }
password-hash = { version = "0.5.0", default-features = false, features = [
    "alloc",
    "rand_core",
] }

# sea-orm
sea-orm = { version = "1.1.11", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros", "debug-print", "with-chrono" ] }

# swagger ui
utoipa = { version = "5.3.1" }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa-axum = { version = "0.2.0" }
utoipa-scalar = { version = "0.3.0" }
# 系统信息
sysinfo = { version = "0.33.1" }
# 随机数
md5 = { version = "0.7.0" }
rand = { version = "0.9.1" }
anyhow = "1.0.98" # 返回
dotenvy = "0.15.7" # 读取配置文件
once_cell = "1.21.3"
ctor = "0.4.2"
uaparser = "0.6.4"

# strum
strum = "0.27"
strum_macros = "0.27"

common = { path = "../../../framework/common" }
macros = { path = "../../../framework/macros" }
erp-model = { path = "../erp-model" }
system-common = { path = "../../module-system/system-common" }