[package]
name = "logger-server"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints.rust]
unused_imports = "allow"
warnings = "allow"

[dependencies]
axum = { version = "0.8.4", default-features = false, features = [
    "matched-path",
    "form",
    "tracing",
    "query",
    "json",
    "tokio",
    "http1",
] }
tower-http = { version = "0.6.4", default-features = false, features = [
    "fs",
    "trace",
    "cors"
] }
once_cell = "1.21.3"
# log
tracing = { version = "0.1.41" }
tracing-appender = { version = "0.2.3", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "env-filter",
    "time",
    "local-time",
    "fmt",
    "registry",
    "std",
] }
console-subscriber = { version = "0.4.1", default-features = false, features = [
    "env-filter",
] }
tokio = "1.45.0"
anyhow = "1.0.98"
dotenvy = "0.15.7" # 读取配置文件

# swagger ui
utoipa = { version = "5.3.1" }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa-axum = { version = "0.2.0" }
utoipa-scalar = { version = "0.3.0" }
chrono = "0.4.41"
uaparser = "0.6.4"

ctor = "0.4.2"

common = { path = "../../../framework/common" }
macros = { path = "../../../framework/macros" }
logger-model = { path = "../logger-model" }