[package]
name = "system-common"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints.rust]
unused_imports = "allow"

[dependencies]
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.41" }       # 用于处理时间

serde_with = { version = "3.12.0" }

anyhow = "1.0.98" # 返回

tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }

common = { path = "../../../framework/common" }
system-model = { path = "../system-model" }
system-grpc = { path = "../system-grpc" }