[package]
name = "system-model"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
serde_json = "1.0.139"
sea-orm = { version = "1.1.6", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
chrono = { version = "0.4.39" }       # 用于处理时间

common = { path = "../../../framework/common" }