[package]
name = "captcha-grpc-rust"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints.rust]
unused_imports = "allow"

[dependencies]
prost = "0.13.5"
tonic = "0.13.1"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.98"

[build-dependencies]
tonic-build = "0.13.1"
prost-build = "0.13.5"